--- a/arch/arm64/configs/hanoip_defconfig
+++ b/arch/arm64/configs/hanoip_defconfig
@@ -607,10 +607,8 @@ CONFIG_MEMORY_ISOLATION=y
 # CONFIG_MEMORY_HOTPLUG is not set
 CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
-# CONFIG_PROCESS_RECLAIM is not set
 CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
-CONFIG_BOUNCE=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
@@ -634,7 +632,6 @@ CONFIG_FRAME_VECTOR=y
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 # CONFIG_HAVE_LOW_MEMORY_KILLER is not set
-# CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_VMSTAT_INTERVAL=10
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -5004,6 +5001,7 @@ CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=63
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
 CONFIG_DEVFREQ_CPU_LLCC_DDR_BW_BOOST_FREQ=2597
+CONFIG_DEVFREQ_CPU_CPU_LLCC_BW_BOOST_FREQ=0
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
